--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,7 +20,21 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Cache Gradle Packages
+      uses: actions/cache@v2
+      with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{runner.os}}-gradle-${{hashFiles('**/*.gradle*', '**/gradle-wrapper.properties')}}
+          restore-keys: |
+            ${{runner.os}}-gradle-          
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
+    - name: Run ktlint
+      run: ./gradlew ktlintCheck
+
     - name: Build with Gradle
       run: ./gradlew build
